--- a/style.css
+++ b/style.css
@@ -2,3 +2,18 @@ body {
 	background-color: #91a0ba;
 	margin: 0;
 }
+#heading{
+	padding: 20px; 
+	margin: 10px auto;
+	border: 1px solid black;
+	background-color: #eee;
+	color: #333;
+}
+
+#clickers button{
+	margin-bottom: 10px;
+}
+#inventory p{
+	margin-top: 2px;
+	margin-bottom: 15px;
+}
