--- a/style.css
+++ b/style.css
@@ -10,8 +10,13 @@ body {
 	color: #333;
 }
 
+#progress-bar p{
+	text-align: right;
+}
+
 #clickers button{
 	margin-bottom: 10px;
+	display: block;
 }
 #inventory p{
 	margin-top: 2px;
